Basic prototype done. still mising 404Controller and testing on how to handle GET/POST requests

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,5 @@
 <IfModule mod_rewrite.c>
-    <IfModule mod_negotiation.c>
-        Options -MultiViews -Indexes
-    </IfModule>
+    Options +FollowSymLinks -MultiViews
 
     RewriteEngine On
 
@@ -20,11 +18,11 @@
     RewriteRule ^ index.php [L]
 </IfModule>
 
-# Options +FollowSymLinks -MultiViews
+# 
 
 # RewriteEngine On
 # RewriteBase /
 # RewriteCond %{REQUEST_FILENAME} !-d
-# RewriteCond %{REQUEST_FILENAME} !-f
+# # RewriteCond %{REQUEST_FILENAME} !-f
 # RewriteRule ^(.+)$ index.php [L]
 # RewriteRule !^Views/(.*)$ index.php [L]
