--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,14 @@
             "email": "gustavodacorte@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "Routes\\": "Routes", 
+            "Controllers\\": "Controller",
+            "Middlewares\\": "Middleware",
+            "Modules\\": "Modules",
+            "Views\\": "Views"
+        }
+    }
 }
